--- a/mov_rec/Gemfile
+++ b/mov_rec/Gemfile
@@ -24,6 +24,9 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 # Hash function 
 gem 'bcrypt', '3.1.7'
+# CSS styling
+gem 'bootstrap-sass', '3.2.0.0'
+
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
